bug fixes and major improvements + support for inlay hint  (#23)
* Changes

range/offset fixes
diagnostics narrowing/profiling
Java 25 runtime/build updates
default-interface definition/reference fixes

* Fixed missing completion inside interfaces

* Delete inlay hints and cleanup logs

* delete vscodeignore

* Major cleanup part 1

* docs

* public access

* simplify

* Major cleanup to simplify indexing

* More cleanup

* More cleanups and bug fixes

- early returns
- remove thin wrappers
- fixed missing completions on streams/maps etc.
- typeindexrouter is now the engine behind routing the indexes
- definition works better now with lambda,streams
- some logic is now shared instead of duplicated
- docs

* Fixed logging being overriden

* Fixes and improvements

- cache jdk scans
- proper lsp progress support
- fixed markdown warning

* Cache maven list and sources for faster startup

* Simplify inferconfig maven cache + tests

* Changes

- fixed stream lombok methods not showing
- fixed reusablecompiler crash
- implemented --release based on pom.xml java version
- fixed maven cache

* Proper declaration drift check, bump revision if java file, catch signature exception, more debug log statements

* Bug fixes and improvements

- Fixed issue where compiler would fallback to non-AP compile if
AP-compile failed which resultet in wrong diagnostics
- Catch exception if diagnostics fails to compile and return silently
- Deleted one test

* Major refactorings and bug fixes

- moved classes to correct packages
- fixed compiler state bug
- performance improved on definition
- proper use of indexed pojos in defintion and parsetype resolver (still
needs more work)
- moved hoverprovider completion resolve to completionprovider
- fixed issue with added modules on java 8 project
- fixed issue where index wasn't ready on hover
- fixed some tests and added some more

* Simplify diagnostic flow

- client handle diagnostic request
- bump dependencies

* fixes and improvements

- fix