@@ -1,54 +1,62 @@
-package org.javacs.navigation;
+package org.javacs.provider;
 
-import com.sun.source.tree.ExpressionTree;
 import com.sun.source.tree.IdentifierTree;
 import com.sun.source.tree.MemberReferenceTree;
 import com.sun.source.tree.MemberSelectTree;
-import com.sun.source.tree.MethodInvocationTree;
 import com.sun.source.tree.MethodTree;
 import com.sun.source.tree.NewClassTree;
-import com.sun.source.tree.VariableTree;
 import com.sun.source.util.TreePath;
 import com.sun.source.util.TreePathScanner;
 import com.sun.source.util.Trees;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.LinkedHashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import org.javacs.CompilerProvider;
 import org.javacs.FindHelper;
 import org.javacs.ParseTask;
-import org.javacs.completion.CompositeTypeIndex;
-import org.javacs.completion.TypeMemberIndex;
+import org.javacs.index.TypeIndexRouter;
 import org.javacs.lsp.Location;
+import org.javacs.navigation.NavigationSymbolSupport;
+import org.javacs.resolve.ParseTypeResolver;
+import org.javacs.resolve.TypeNames;
 
+/**
+ * Find references by resolving the target symbol once through {@link DefinitionProvider} and then
+ * matching occurrences through shared navigation-side symbol keys.
+ */
 public class ReferenceProvider {
     private final CompilerProvider compiler;
-    private final CompositeTypeIndex completionIndex;
+    private final TypeIndexRouter typeIndexRouter;
     private final Path file;
     private final int line, column;
+    private final boolean includeDeclaration;
 
     public static final List<Location> NOT_SUPPORTED = List.of();
 
     public ReferenceProvider(CompilerProvider compiler, Path file, int line, int column) {
-        this(compiler, CompositeTypeIndex.EMPTY, file, line, column);
+        this(compiler, TypeIndexRouter.EMPTY, file, line, column, false);
     }
 
-    public ReferenceProvider(CompilerProvider compiler, CompositeTypeIndex completionIndex, Path file, int line, int column) {
+    public ReferenceProvider(CompilerProvider compiler, TypeIndexRouter typeIndexRouter, Path file, int line, int column) {
+        this(compiler, typeIndexRouter, file, line, column, false);
+    }
+
+    public ReferenceProvider(
+            CompilerProvider compiler,
+            TypeIndexRouter typeIndexRouter,
+            Path file,
+            int line,
+            int column,
+            boolean includeDeclaration) {
         this.compiler = compiler;
-        this.completionIndex = completionIndex == null ? CompositeTypeIndex.EMPTY : completionIndex;
+        this.typeIndexRouter = typeIndexRouter == null ? TypeIndexRouter.EMPTY : typeIndexRouter;
         this.file = file;
         this.line = line;
         this.column = column;
+        this.includeDeclaration = includeDeclaration;
     }
 
     public List<Location> find() {
-        var definitions = new DefinitionProvider(compiler, completionIndex, file, line, column);
+        var definitions = new DefinitionProvider(compiler, typeIndexRouter, file, line, column);
         var target = definitions.resolveSymbol();
         if (!isSupported(target)) {
             return NOT_SUPPORTED;
@@ -59,10 +67,14 @@ public class ReferenceProvider {
         if (target.memberName() == null) {
             return findTypeReferences(definitions, target);
         }
-        if (fieldLogicalKey(target).isPresent()) {
-            return findFieldReferencesScoped(definitions, target, fieldLogicalKey(target).get());
+        var fieldLogicalKey = NavigationSymbolSupport.fieldLogicalKey(target);
+        if (fieldLogicalKey.isPresent()) {
+            return findFieldReferencesScoped(definitions, target, fieldLogicalKey.get());
         }
-        return findMemberReferences(definitions, target, targetParameterTypes(target));
+        return findMemberReferences(
+                definitions,
+                target,
+                NavigationSymbolSupport.targetParameterTypes(compiler, typeIndexRouter, target));
     }
 
     private boolean isSupported(DefinitionProvider.ResolvedSymbol target) {
@@ -144,7 +156,7 @@ public class ReferenceProvider {
 
                 @Override
                 public Void visitNewClass(NewClassTree tree, Void unused) {
-                    maybeAdd(parse, getCurrentPath(), simpleTreeName(tree.getIdentifier().toString()));
+                    maybeAdd(parse, getCurrentPath(), TypeNames.simpleName(tree.getIdentifier().toString()));
                     return super.visitNewClass(tree, unused);
                 }
 
@@ -156,12 +168,12 @@ public class ReferenceProvider {
                         return;
                     }
                     var location = FindHelper.locationStrict(parse, path, name);
-                    if (location == null || isDeclarationLocation(location, target)) {
+                    if (location == null || (!includeDeclaration && isDeclarationLocation(location, target))) {
                         return;
                     }
                     dedup.putIfAbsent(key(location), location);
                 }
-            }.scan(parse.root, null);
+            }.scan(parse.root(), null);
         }
         return new ArrayList<>(dedup.values());
     }
@@ -187,20 +199,46 @@ public class ReferenceProvider {
                 && Objects.equals(target.qualifiedType(), resolved.qualifiedType())
                 && !resolved.method()
                 && isConstructorUse(path)
-                && signatureMatches(targetParameterTypes, occurrenceParameterTypes(parse, path))) {
+                && signatureMatches(
+                        targetParameterTypes,
+                        NavigationSymbolSupport.occurrenceParameterTypes(parse, path, typeIndexRouter, compiler))) {
             return true;
         }
-        var resolvedKey = methodCanonicalKey(resolved, parse, path);
-        return resolved.method()
-                && resolvedKey != null
-                && relatedMethodKeys.contains(resolvedKey)
-                && signatureMatches(targetParameterTypes, occurrenceParameterTypes(parse, path));
+        var resolvedKey =
+                NavigationSymbolSupport.methodCanonicalKey(
+                        resolved, parse, path, typeIndexRouter, compiler);
+        if (!resolved.method()) {
+            return false;
+        }
+        if (resolvedKey != null && relatedMethodKeys.contains(resolvedKey)) {
+            return signatureMatches(
+                    targetParameterTypes,
+                    NavigationSymbolSupport.occurrenceParameterTypes(parse, path, typeIndexRouter, compiler));
+        }
+        return methodOwnerMatches(target.qualifiedType(), resolved.qualifiedType())
+                && Objects.equals(target.memberName(), resolved.memberName())
+                && signatureMatches(
+                        targetParameterTypes,
+                        NavigationSymbolSupport.occurrenceParameterTypes(parse, path, typeIndexRouter, compiler));
+    }
+
+    private boolean methodOwnerMatches(String targetOwner, String resolvedOwner) {
+        if (Objects.equals(targetOwner, resolvedOwner)) {
+            return true;
+        }
+        if (targetOwner == null || resolvedOwner == null) {
+            return false;
+        }
+        return typeIndexRouter.directSupertypes(resolvedOwner).contains(targetOwner)
+                || typeIndexRouter.directSupertypes(targetOwner).contains(resolvedOwner)
+                || typeIndexRouter.workspaceSubTypes(targetOwner).contains(resolvedOwner)
+                || typeIndexRouter.workspaceSubTypes(resolvedOwner).contains(targetOwner);
     }
 
     private boolean matchesFieldReference(
             DefinitionProvider definitions, ParseTask parse, TreePath path, String logicalKey) {
         var resolved = resolveOccurrence(definitions, parse, path);
-        return Objects.equals(logicalKey, logicalKey(resolved));
+        return Objects.equals(logicalKey, NavigationSymbolSupport.logicalKey(resolved));
     }
 
     private boolean matchesLocalReference(
@@ -209,84 +247,29 @@ public class ReferenceProvider {
         if (resolved.locations().isEmpty() || target.locations().isEmpty()) {
             return false;
         }
-        return sameLocation(target.locations().get(0), resolved.locations().get(0));
+        return sameLocation(target.locations().getFirst(), resolved.locations().getFirst());
     }
 
     private DefinitionProvider.ResolvedSymbol resolveOccurrence(
             DefinitionProvider definitions, ParseTask parse, TreePath path) {
-        var cursor = Trees.instance(parse.task).getSourcePositions().getStartPosition(parse.root, path.getLeaf());
+        var cursor = Trees.instance(parse.task()).getSourcePositions().getStartPosition(parse.root(), path.getLeaf());
         if (cursor < 0) {
-            cursor = parse.root.getLineMap().getPosition(1, 1);
+            cursor = parse.root().getLineMap().getPosition(1, 1);
         }
-        return definitions.resolve(parse, path, cursor + 1);
+        return definitions.resolve(
+                parse, path, new ParseTypeResolver(parse, compiler, typeIndexRouter, cursor + 1));
     }
 
     private boolean isDeclarationLocation(Location location, DefinitionProvider.ResolvedSymbol target) {
         return !target.locations().isEmpty() && sameLocation(location, target.locations().get(0));
     }
 
-    private List<String> targetParameterTypes(DefinitionProvider.ResolvedSymbol target) {
-        if (target.locations().isEmpty()) {
-            return List.of();
-        }
-        var location = target.locations().get(0);
-        if (location.uri == null || !"file".equals(location.uri.getScheme())) {
-            return List.of();
-        }
-        var targetFile = Path.of(location.uri);
-        var parse = compiler.parse(targetFile);
-        var line = location.range.start.line + 1;
-        var column = location.range.start.character + 1;
-        var cursor = parse.root.getLineMap().getPosition(line, column);
-        var path = new org.javacs.FindNameAt(parse).scan(parse.root, cursor);
-        if (path == null || !(path.getLeaf() instanceof MethodTree method)) {
-            return List.of();
-        }
-        return declaredParameterTypes(parse, path, method);
-    }
-
-    private List<String> occurrenceParameterTypes(ParseTask parse, TreePath path) {
-        var leaf = path.getLeaf();
-        if (leaf instanceof NewClassTree newClassTree) {
-            return argumentTypes(parse, path, newClassTree.getArguments());
-        }
-        var parent = path.getParentPath() != null ? path.getParentPath().getLeaf() : null;
-        if (parent instanceof NewClassTree newClassTree) {
-            return argumentTypes(parse, path.getParentPath(), newClassTree.getArguments());
-        }
-        if (parent instanceof MethodInvocationTree invocation) {
-            return argumentTypes(parse, path.getParentPath(), invocation.getArguments());
-        }
-        return List.of();
-    }
-
-    private List<String> declaredParameterTypes(ParseTask parse, TreePath path, MethodTree method) {
-        var cursor = Trees.instance(parse.task).getSourcePositions().getStartPosition(parse.root, path.getLeaf()) + 1;
-        var resolver = new ParseTypeResolver(parse, completionIndex, compiler, cursor);
-        var result = new ArrayList<String>(method.getParameters().size());
-        for (VariableTree parameter : method.getParameters()) {
-            if (parameter.getType() == null) {
-                return List.of();
-            }
-            var resolved = resolver.resolveTypeTree(parameter.getType(), false);
-            result.add(canonicalType(resolved.map(type -> type.qualifiedType).orElse(parameter.getType().toString())));
-        }
-        return result;
-    }
-
-    private List<String> argumentTypes(ParseTask parse, TreePath path, List<? extends ExpressionTree> arguments) {
-        var cursor = Trees.instance(parse.task).getSourcePositions().getStartPosition(parse.root, path.getLeaf()) + 1;
-        var resolver = new ParseTypeResolver(parse, completionIndex, compiler, cursor);
-        var result = new ArrayList<String>(arguments.size());
-        for (var argument : arguments) {
-            var resolved = resolver.resolveExpression(argument);
-            result.add(canonicalType(resolved.map(type -> type.qualifiedType).orElse("")));
-        }
-        return result;
-    }
-
     private boolean signatureMatches(List<String> targetParameterTypes, List<String> occurrenceParameterTypes) {
         if (targetParameterTypes.isEmpty() || occurrenceParameterTypes.isEmpty()) {
+            return true;
+        }
+        if (targetParameterTypes.stream().anyMatch(String::isBlank)
+                || occurrenceParameterTypes.stream().anyMatch(String::isBlank)) {
             return true;
         }
         return targetParameterTypes.equals(occurrenceParameterTypes);
@@ -326,54 +309,35 @@ public class ReferenceProvider {
     private Set<String> relatedMethodKeys(
             DefinitionProvider.ResolvedSymbol target, List<String> targetParameterTypes) {
         if (target.indexMember() != null) {
-            if (completionIndex.isWorkspaceOwnedType(target.indexMember().ownerType, compiler)) {
-                return completionIndex.workspace().relatedMethodKeys(
+            String[] erasedParameterTypes = target.indexMember().erasedParameterTypes == null
+                    ? new String[0]
+                    : target.indexMember().erasedParameterTypes;
+            if (typeIndexRouter.isWorkspaceOwnedType(target.indexMember().ownerType)) {
+                return typeIndexRouter.workspace().relatedMethodKeys(
                         target.indexMember().ownerType,
                         target.indexMember().name,
-                        target.indexMember().erasedParameterTypes == null
-                                ? new String[0]
-                                : target.indexMember().erasedParameterTypes);
+                        erasedParameterTypes);
             }
-            return completionIndex.relatedMethodKeys(
+            return typeIndexRouter.relatedMethodKeys(
                     target.indexMember().ownerType,
                     target.indexMember().name,
-                    target.indexMember().erasedParameterTypes == null
-                            ? new String[0]
-                            : target.indexMember().erasedParameterTypes);
+                    erasedParameterTypes);
         }
-        if (completionIndex.isWorkspaceOwnedType(target.qualifiedType(), compiler)) {
-            return completionIndex.workspace().relatedMethodKeys(
+        if (typeIndexRouter.isWorkspaceOwnedType(target.qualifiedType())) {
+            return typeIndexRouter.workspace().relatedMethodKeys(
                     target.qualifiedType(), target.memberName(), targetParameterTypes.toArray(String[]::new));
         }
-        return completionIndex.relatedMethodKeys(
+        return typeIndexRouter.relatedMethodKeys(
                 target.qualifiedType(), target.memberName(), targetParameterTypes.toArray(String[]::new));
-    }
-
-    private Optional<String> fieldLogicalKey(DefinitionProvider.ResolvedSymbol target) {
-        if (target == null || target.qualifiedType() == null || target.memberName() == null) {
-            return Optional.empty();
-        }
-        if (target.indexMember() != null && target.indexMember().logicalKey != null) {
-            if (!Objects.equals(target.indexMember().logicalKey, target.indexMember().canonicalKey)
-                    || !target.method()) {
-                return Optional.of(target.indexMember().logicalKey);
-            }
-        }
-        if (!target.method()) {
-            return Optional.of(
-                    TypeMemberIndex.canonicalMemberKey(
-                            target.qualifiedType(), org.javacs.lsp.CompletionItemKind.Field, target.memberName(), null));
-        }
-        return Optional.empty();
     }
 
     private Set<String> relatedLogicalNames(DefinitionProvider.ResolvedSymbol target, String logicalKey) {
         var names = new LinkedHashSet<String>();
         if (target.memberName() != null) {
             names.add(target.memberName());
-            names.addAll(accessorNames(target.memberName()));
+            names.addAll(NavigationSymbolSupport.accessorNames(target.memberName()));
         }
-        completionIndex.typeInfo(target.qualifiedType())
+        typeIndexRouter.typeInfo(target.qualifiedType())
                 .ifPresent(
                         info ->
                                 info.members.stream()
@@ -382,85 +346,16 @@ public class ReferenceProvider {
         return names;
     }
 
-    private String logicalKey(DefinitionProvider.ResolvedSymbol symbol) {
-        if (symbol.indexMember() != null && symbol.indexMember().logicalKey != null) {
-            return symbol.indexMember().logicalKey;
-        }
-        if (!symbol.method() && symbol.qualifiedType() != null && symbol.memberName() != null) {
-            return TypeMemberIndex.canonicalMemberKey(
-                    symbol.qualifiedType(), org.javacs.lsp.CompletionItemKind.Field, symbol.memberName(), null);
-        }
-        return null;
-    }
-
-    private String methodCanonicalKey(
-            DefinitionProvider.ResolvedSymbol resolved, ParseTask parse, TreePath path) {
-        if (resolved.indexMember() != null && resolved.indexMember().canonicalKey != null) {
-            return resolved.indexMember().canonicalKey;
-        }
-        if (!resolved.method() || resolved.qualifiedType() == null || resolved.memberName() == null) {
-            return null;
-        }
-        List<String> parameterTypes;
-        if (path.getLeaf() instanceof MethodTree method) {
-            parameterTypes = declaredParameterTypes(parse, path, method);
-        } else if (path.getParentPath() != null && path.getParentPath().getLeaf() instanceof MethodTree method) {
-            parameterTypes = declaredParameterTypes(parse, path.getParentPath(), method);
-        } else {
-            parameterTypes = occurrenceParameterTypes(parse, path);
-        }
-        return TypeMemberIndex.canonicalMemberKey(
-                resolved.qualifiedType(), org.javacs.lsp.CompletionItemKind.Method, resolved.memberName(), parameterTypes.toArray(String[]::new));
-    }
-
     private Path[] includeDeclarationFile(String qualifiedType, Path[] files) {
         var classFile = compiler.findTypeDeclaration(qualifiedType);
         if (classFile == null || classFile.equals(CompilerProvider.NOT_FOUND)) {
             return files;
         }
-        var combined = new ArrayList<Path>();
-        for (var f : files) {
-            combined.add(f);
-        }
+        var combined = new ArrayList<>(Arrays.asList(files));
         if (!combined.contains(classFile)) {
             combined.add(classFile);
         }
         return combined.toArray(Path[]::new);
-    }
-
-    private Set<String> accessorNames(String fieldName) {
-        if (fieldName == null || fieldName.isEmpty()) {
-            return Set.of();
-        }
-        var base = fieldName.substring(0, 1).toUpperCase(Locale.ROOT) + fieldName.substring(1);
-        return Set.of("get" + base, "is" + base, "set" + base);
-    }
-
-    private String simpleTreeName(String raw) {
-        var genericStart = raw.indexOf('<');
-        if (genericStart >= 0) {
-            raw = raw.substring(0, genericStart);
-        }
-        var dot = raw.lastIndexOf('.');
-        return dot >= 0 ? raw.substring(dot + 1) : raw;
-    }
-
-    private String canonicalType(String typeName) {
-        var raw = typeName == null ? "" : typeName.trim();
-        while (raw.endsWith("[]")) {
-            raw = raw.substring(0, raw.length() - 2);
-        }
-        return switch (raw) {
-            case "byte", "java.lang.Byte" -> "java.lang.Byte";
-            case "short", "java.lang.Short" -> "java.lang.Short";
-            case "int", "java.lang.Integer" -> "java.lang.Integer";
-            case "long", "java.lang.Long" -> "java.lang.Long";
-            case "float", "java.lang.Float" -> "java.lang.Float";
-            case "double", "java.lang.Double" -> "java.lang.Double";
-            case "boolean", "java.lang.Boolean" -> "java.lang.Boolean";
-            case "char", "java.lang.Character" -> "java.lang.Character";
-            default -> raw;
-        };
     }
 
     @FunctionalInterface
